[package]
name = "xenomorph"
version = "0.1.0"
edition = "2021"
description = """Shapeshift between package formats"""
homepage = "https://github.com/pluiedev/xenomorph"
repository = "https://github.com/pluiedev/xenomorph"
license = "GPL-2.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.9"
base64 = "0.22"
bpaf = { version = "0.9", features = ["derive"] }
bzip2 = "0.5"
color-eyre = "0.6"
enum_dispatch = "0.3"
enumflags2 = "0.7"
eyre = "0.6"
flate2 = "1.0"
fs_extra = "1.3"
glob = "0.3"
nix = { version = "0.29", default-features = false, features = ["user", "fs"] }
simple-eyre = "0.3"
snailquote = "0.3"
subprocess = "0.2"
tar = "0.4"
time = { version = "0.3", features = ["local-offset", "formatting"] }
which = "7.0"
whoami = "1.5"
liblzma = "0.3"
tempfile = "3.14.0"

[profile.release]
strip = true
opt-level = "z"
lto = "thin"

[package.metadata.deb]
maintainer = "Arnaud Quette <aquette@debian.org>"
copyright = "2023-2024, Leah Amelia Chen <hi@pluie.me>"
extended-description = """A tool that converts software packages to work from one package manager to the next, originating as a rewrite of the classic alien script."""
depends = "$auto"
section = "utility"
priority = "optional"
replaces = "alien"
provides = "alien"
suggests = "rpm"
assets = [
 ["target/release/xenomorph", "usr/bin/", "755"],
 ["README.md", "usr/share/doc/xenomorph/", "644"],
]
